# aaios

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENT_SDK.md  API_REFERENCE.md  ARCHITECTURE.md  BACKUP.md  BEST_PRACTICES.md  CERTIFICATION_v5.2.md  CERTIFICATION_v5.3.1_LTS.md  CHANGELOG.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  Dockerfile  EXECUTION_ENGINE.md  FAQ.md  FINAL_CERTIFICATION.md  INSTALLATION.md  INTELLIGENCE_ENGINE.md  LICENSE  LINUX_GUIDE.md  MCP_GUIDE.md  MIGRATION_GUIDE.md  MIGRATION_v4.1.md  MIGRATION_v5.2.md  MIGRATION_v5.3.1_LTS.md  MIGRATION_v5.3.md  MISSION_ENGINE.md  Makefile  OPERATIONS.md  PLUGIN_SDK.md  PROVIDER_GUIDE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v4.1.md  RELEASE_NOTES_v5.2.md  (+21 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/issue-templates/: agent-proposal.yml  bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
agents/: __init__.py
agents/_base/: __init__.py  in_process.py  remote_service.py  subprocess_bridge.py
agents/_impls/: __init__.py  mock_agent.py
agents/_types/: __init__.py  brow.py  cod.py  cus.py  dep.py  des.py  doc.py  gen.py  mem.py  pla.py  qaa.py  ref.py  res.py  sec.py  sup.py  vis.py  voi.py  wfe.py
config/: defaults.yaml
core/: __init__.py  bootstrap.py
core/config/: __init__.py  exceptions.py  manager.py  secret_ref.py
core/contracts/: __init__.py  actor.py  event.py  execution_engine.py  health.py  permission.py  provider.py  task.py  timestamp.py
core/di/: __init__.py  container.py
core/event_bus/: __init__.py  bus.py  memory.py  store.py
core/gateway/: __init__.py  audit.py  fs.py  gateway.py  git.py  net.py  permission.py  shell.py
core/logging/: __init__.py  setup.py
core/platform/: __init__.py  base.py  factory.py  linux.py  windows.py
core/registry/: __init__.py  prompt_registry.py  tool_registry.py
core/state/: __init__.py  manager.py  reducers.py
core/telemetry/: __init__.py  setup.py
deploy/docker/: docker-compose.yml
deploy/linux/: install.sh  uninstall.sh
deploy/windows/: aaios.iss  bootstrap.ps1  install.ps1  uninstall.ps1
deploy/wsl/: install.sh  uninstall.sh
desktop_data/: workspaces.json
desktop_data/offline/: sync_queue.json
docs/: administrator_guide.md  api-reference.md  api_cli_documentation.md  backup_guide.md  benchmark_guide.md  certification_report.md  cli-reference.md  deployment.md  deployment_guide.md  desktop_runtime_guide.md  developer-guide.md  enterprise_certification_report.md  experience-engine.md  installation.md  installer_guide.md  migration-v2.md  migration_notes.md  native_api_guide.md  offline_guide.md  operations_guide.md  organization-system.md  packaging_guide.md  recovery_guide.md  release_guide.md  troubleshooting.md  update_framework_guide.md  validation_guide.md
docs/adr/: 001-desktop-architecture.md  002-offline-strategy.md  003-update-framework.md  004-native-integrations.md  005-installer-architecture.md
docs/architecture/: 00-overview.md  01-goals-and-principles.md  02-generic-agent-runtime.md  02-system-design.md  03-component-map.md  03-system-design.md  04-component-map.md  04-data-flow.md  05-data-flow.md  05-tech-stack.md  06-security-model.md  06-tech-stack.md  07-deployment-topology.md  07-security-model.md  08-deployment-topology.md  08-roadmap.md  09-roadmap.md  README.md
docs/operations/: branch-protection.md
docs/screenshots/: README.md
download/release/: architecture_compliance_report.md  architecture_manifest.json  certification_report.md  checksums.txt  compatibility_matrix.json  component_manifest.json  dependency_tree.txt  deployment_readiness_report.md  enterprise_validation_report.md  license_inventory.json  performance_report.json  release_manifest.json  release_package_summary.txt  release_readiness_report.md  sbom.json  security_report.json  support_matrix.json  validation_report.json
orchestrator/: __init__.py  approval_gates.py  checkpoint_store.py  core.py  dag.py  queue.py  scheduler.py  workers.py  workflow_engine.py
orchestrator/contracts/: __init__.py  approval_gate.py  checkpoint.py  dag.py  retry.py  schedule.py  work.py
scripts/: auto_update.py  bind_agents.py  create-release.ps1  start.py
scripts/lts/: audit.py  benchmark.py  coverage.py  docs.py  security.py
services/: __init__.py
services/agent_registry/: __init__.py  exceptions.py  registry.py
services/agent_sdk/: __init__.py
services/backup/: __init__.py  manager.py  models.py  recovery.py
services/benchmark/: __init__.py  manager.py  models.py
services/brain/: __init__.py  snapshot.py
services/certify/: __init__.py  manager.py  models.py
services/cleanup/: __init__.py  manager.py  models.py
services/cognitive/: __init__.py  engines.py  experience_engine.py  learning_engine.py  manager.py  models.py
services/dashboard/: __init__.py  analytics.py  metrics_collector.py  workflow_store.py
services/desktop/: __init__.py  background.py  credentials.py  diagnostics.py  local_ai.py  local_db.py  manager.py  notifications.py  offline.py  perfmon.py  plugins.py  system_tray.py  updater.py  window_manager.py
services/distributed/: __init__.py  cluster_manager.py  node_registry.py
services/doctor/: __init__.py  manager.py  models.py
services/engineering/: __init__.py  agents.py  documentation_intelligence.py  evolution_engine.py  health_center.py  intelligence.py  manager.py  models.py  productivity_engine.py  release_readiness.py  repository_engine.py  review_engine.py  test_intelligence.py
services/execution/: __init__.py  approval_engine.py  audit_store.py  handlers.py  manager.py  models.py  policy_engine.py
services/execution_engine/: __init__.py  discovery.py  events.py  manager.py  models.py  routing.py
services/experience/: __init__.py  analyzer.py  (+7 more)
supervisor/: __init__.py  agent.py  capability_selector.py  correction.py  planner.py  qa.py  reflection.py
surfaces/: __init__.py
(+280 files in other folders)
