[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aaios"
version = "0.1.0.dev0"
description = "Agentic AI Operating System — a Windows-first, modular runtime for orchestrating generic AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
  { name = "AAiOS Contributors" },
]
keywords = ["ai", "agents", "orchestration", "llm", "windows", "operating-system"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  # --- Async runtime & web framework ---
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  # --- Validation & ORM ---
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "alembic>=1.13,<2",
  "aiosqlite>=0.20,<1",         # dev/test DB
  "asyncpg>=0.29,<1",           # prod DB (Linux/Mac)
  # Windows note: asyncpg ships prebuilt wheels for Windows on Python 3.12.
  # --- HTTP & networking ---
  "httpx>=0.27,<1",
  "tenacity>=9.0,<10",          # retry policies
  # --- CLI ---
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  # --- Logging & telemetry ---
  "structlog>=24.4,<25",
  "opentelemetry-api>=1.25,<2",
  "opentelemetry-sdk>=1.25,<2",
  "opentelemetry-exporter-otlp>=1.25,<2",
  # --- Templating & DI ---
  "jinja2>=3.1,<4",
  "dependency-injector>=4.41,<5",
  # --- Crypto & auth ---
  "cryptography>=43.0,<44",
  "argon2-cffi>=23.1,<26",
  "authlib>=1.3,<2",
  "itsdangerous>=2.2,<3",
  # --- Vector DB ---
  "qdrant-client>=1.11,<2",
  # --- Knowledge graph (in-process default) ---
  "networkx>=3.3,<4",
  # --- Embeddings (local fallback) ---
  "sentence-transformers>=3.1,<4",
  # --- Agent subprocess bridging ---
  # (stdlib subprocess + pywin32 on Windows)
]

[project.optional-dependencies]
# Windows-specific dependencies (installed automatically on Windows)
windows = [
  "pywin32>=306; platform_system=='Windows'",
  "pywinauto>=0.6.8; platform_system=='Windows'",
  "pyautogui>=0.9.54; platform_system=='Windows'",
  "psutil>=6.0,<7",
]
# Linux-specific dependencies (installed automatically on Linux)
linux = [
  "psutil>=6.0,<7",
  # Linux desktop automation (Phase 1.1)
  "python-xlib>=0.33; platform_system=='Linux'",
]
# Development tools
dev = [
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "bandit>=1.7,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5.0,<6",
  "pytest-mock>=3.14,<4",
  "hypothesis>=6.108,<7",
  "pip-audit>=2.7,<3",
  "types-pywin32>=306; platform_system=='Windows'",
]
# Documentation
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.26,<1",
]
# Optional Redis adapter for multi-process event bus
redis = [
  "redis>=5.0,<6",
]
# Optional Neo4j adapter for the Knowledge Graph
neo4j = [
  "neo4j>=5.23,<6",
]

[project.scripts]
aaios = "aaios.surfaces.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/rachidSabah/aaios"
Repository = "https://github.com/rachidSabah/aaios"
Documentation = "https://github.com/rachidSabah/aaios/tree/main/docs"
"Bug Tracker" = "https://github.com/rachidSabah/aaios/issues"
"Security Policy" = "https://github.com/rachidSabah/aaios/security/policy"

[tool.hatch.build.targets.wheel]
packages = [
  "core",
  "services",
  "agents",
  "supervisor",
  "orchestrator",
  "surfaces",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "node_modules",
  "surfaces/web",
  "docs",
]

[tool.ruff.lint]
# All rules enabled by default; opt out individually.
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",                # isort
  "B",                # bugbear
  "C4",               # comprehensions
  "UP",               # pyupgrade
  "SIM",              # simplify
  "RUF",              # ruff-specific
  "PTH",              # use pathlib
  "ERA",              # eradicate (no commented-out code)
  "PL",               # pylint
  "S",                # bandit (security)
  "ASYNC",            # async linting
  "TCH",              # type-checking imports
  "PT",               # pytest style
  "C90",              # mccabe complexity
  "N",                # pep8-naming
  "D",                # pydocstyle
]
ignore = [
  "D100", "D104", "D105", "D107",   # missing docstrings for modules/packages/etc
  "S101",                            # assert (used in tests)
  "PLR0913",                         # too many args (we'll allow)
  "E501",                            # line length handled by formatter
  "PLW0603",                         # global statement — acceptable for module-level singletons
  "PLC0415",                         # import inside function — sometimes needed for lazy loading
  "TC001", "TC002", "TC003",         # move imports to TYPE_CHECKING — premature optimization for our use
  "SIM102",                          # nested if — readable as-is
  "SIM112",                          # os.environ case — we use UPPER_CASE already
  "D301",                            # use raw string for backslashes — docstrings, would break formatting
  "ASYNC240",                        # async sleep in finally — known pattern, false positive
  "S701",                            # jinja2 autoescape=False — prompts are not HTML
  "S108",                            # /tmp usage — we use it intentionally
  "PLR2004",                         # magic values — we'll allow in well-named contexts
  "SIM105",                          # contextlib.suppress — readable as try/except/pass
  "RUF006",                          # asyncio.create_task fire-and-forget — intentional
  "PLW2901",                         # for-loop variable overwritten — readable as-is
  "PLR0911",                         # too many return statements — acceptable in helpers
  "PLW0108",                         # unnecessary lambda — readable as-is in tests
  "B017",                            # blind exception in pytest.raises — tests can be broad
  "PT011",                           # pytest.raises without match — tests can be broad
  "PT012",                           # pytest.raises multi-statement — tests can be multi-line
  "RUF043",                          # regex pattern in match — tests can be loose
  "RUF100",                          # unused noqa — ruff version churn, will fix incrementally
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "D", "PLR2004"]            # tests can use asserts, magic values
"scripts/**" = ["S", "D"]
"surfaces/web/**" = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "agents", "supervisor", "orchestrator", "surfaces"]

# ---------------------------------------------------------------------------
# Mypy — strict typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  ".",
]
files = [
  "core",
  "services",
  "agents",
  "supervisor",
  "orchestrator",
  "surfaces/api",
  "surfaces/cli",
]

[[tool.mypy.overrides]]
module = ["pywinauto.*", "pyautogui.*", "win32api", "win32con", "win32service", "win32serviceutil", "win32event", "win32job", "win32security", "ntsecuritycon", "pythoncom", "pywintypes"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "--cov=core",
  "--cov=services",
  "--cov=agents",
  "--cov=supervisor",
  "--cov=orchestrator",
  "--cov-report=term-missing",
  "--cov-report=html:coverage/html",
  "--cov-report=xml:coverage/coverage.xml",
]
markers = [
  "offline: tests that must pass with no network access",
  "windows: tests that only run on Windows",
  "linux: tests that only run on Linux",
  "slow: tests that take more than 1 second",
  "integration: tests that require external services (DB, Qdrant, etc.)",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pytest_asyncio.*",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["core", "services", "agents", "supervisor", "orchestrator", "surfaces"]
branch = true
omit = [
  "*/tests/*",
  "*/__main__.py",
  "surfaces/web/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
]

# ---------------------------------------------------------------------------
# Bandit (security)
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "scripts", "surfaces/web"]
# Skips: these are all intentional and reviewed.
# B404, B603, B604: subprocess usage — INV-02 designates core/gateway/ as the
#   only place subprocess may be used. The Gateway is the controlled I/O surface.
# B108: hardcoded /tmp directory — LinuxPlatform.temp_dir returns /tmp/aaios
#   intentionally (Linux is v1.1; Windows uses %TEMP%).
# B701: jinja2 autoescape=False — prompts are not HTML; escaping would corrupt them.
skips = ["B404", "B603", "B604", "B108", "B701"]
targets = ["core", "services", "agents", "supervisor", "orchestrator", "surfaces"]

# ---------------------------------------------------------------------------
# pip-audit
# ---------------------------------------------------------------------------
[tool.pip-audit]
strict = true
desc = true
require-hashes = false  # we'll enable this once requirements.lock is generated
