[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aaios"
version = "1.0.0-rc1"
description = "Agentic AI Operating System — a Windows-first, modular runtime for orchestrating generic AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
  { name = "AAiOS Contributors" },
]
keywords = ["ai", "agents", "orchestration", "llm", "windows", "operating-system"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  # --- Async runtime & web framework ---
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  # --- Validation & ORM ---
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "semver>=3.0,<4",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "alembic>=1.13,<2",
  "aiosqlite>=0.20,<1",
  "asyncpg>=0.29,<1",
  # --- HTTP & networking ---
  "httpx>=0.27,<1",
  "tenacity>=9.0,<10",
  # --- CLI ---
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  # --- Logging & telemetry ---
  "structlog>=24.4,<25",
  "opentelemetry-api>=1.25,<2",
  "opentelemetry-sdk>=1.25,<2",
  "opentelemetry-exporter-otlp>=1.25,<2",
  # --- Templating & DI ---
  "jinja2>=3.1,<4",
  "dependency-injector>=4.41,<5",
  # --- Crypto & auth ---
  "cryptography>=43.0,<44",
  "argon2-cffi>=23.1,<24",
  "authlib>=1.3,<2",
  "itsdangerous>=2.2,<3",
  # --- Vector DB ---
  "qdrant-client>=1.11,<2",
  # --- Knowledge graph (in-process default) ---
  "networkx>=3.3,<4",
  # --- Embeddings (local fallback) ---
  "sentence-transformers>=3.1,<4",
]

[project.optional-dependencies]
windows = [
  "pywin32>=306; platform_system=='Windows'",
  "pywinauto>=0.6.8; platform_system=='Windows'",
  "pyautogui>=0.9.54; platform_system=='Windows'",
  "psutil>=6.0,<7",
]
linux = [
  "psutil>=6.0,<7",
  "python-xlib>=0.33; platform_system=='Linux'",
]
dev = [
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "types-PyYAML>=6.0,<7",
  "bandit>=1.7,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5.0,<6",
  "pytest-mock>=3.14,<4",
  "hypothesis>=6.108,<7",
  "pip-audit>=2.7,<3",
  "types-pywin32>=306; platform_system=='Windows'",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.26,<1",
]
redis = [
  "redis>=5.0,<6",
]
neo4j = [
  "neo4j>=5.23,<6",
]

[project.scripts]
aaios = "surfaces.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/rachidSabah/aaios"
Repository = "https://github.com/rachidSabah/aaios"
Documentation = "https://github.com/rachidSabah/aaios/tree/main/docs"
"Bug Tracker" = "https://github.com/rachidSabah/aaios/issues"
"Security Policy" = "https://github.com/rachidSabah/aaios/security/policy"

[tool.hatch.build.targets.wheel]
packages = [
  "core",
  "services",
  "agents",
  "supervisor",
  "orchestrator",
  "surfaces",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "node_modules",
  "surfaces/web",
  "docs",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "B",
  "C4",
  "UP",
  "SIM",
  "RUF",
  "PTH",
  "ERA",
  "PL",
  "S",
  "ASYNC",
  "TCH",
  "PT",
  "C90",
  "N",
  "D",
]
ignore = [
  "D100", "D104", "D105", "D107",
  "S101",
  "PLR0913",
  "E501",
  "PLW0603",
  "PLC0415",
  "TC001", "TC002", "TC003",
  "SIM102",
  "SIM112",
  "D301",
  "ASYNC240",
  "S701",
  "S108",
  "PLR2004",
  "SIM105",
  "RUF006",
  "PLW2901",
  "PLR0911",
  "PLW0108",
  "B017",
  "PT011",
  "PT012",
  "RUF043",
  "RUF100",
  "RUF005",
  "RUF012",
  "RUF022",
  "SIM103",
  "UP041",
  "PLR1711",
  "D205",
  "D415",
  "F821",
  "D102",
  "SIM110",
  "N806",
  "ERA001",
  "D417",
  "PTH123",
  "SIM108",
  "S105",
  "C901",
  "PLR0915",
  "S110",
  "B007",
  "PLW1510",
  "PTH109",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "D", "PLR2004", "PLR0912"]
"scripts/**" = ["S", "D", "PLR0912", "C901"]
"surfaces/web/**" = []
"surfaces/cli/**" = ["B008", "PLR0912"]
"services/execution/handlers.py" = ["PLR0912", "S310", "ASYNC210", "ASYNC230"]
"services/execution/manager.py" = ["E741"]
"services/execution/audit_store.py" = ["S608"]
"services/cognitive/**" = ["E701", "D101"]
"services/knowledge/**" = ["PLR0912", "E701", "D101", "E741", "SIM101"]
"services/engineering/**" = ["PLR0912", "E701", "D101"]
"surfaces/api/**" = ["B008", "PLR0912", "E741"]
"services/installer/**" = ["S603", "S607", "PLR0912"]
"services/runtime_discovery/**" = ["S603", "S607", "PLR0912"]
"services/brain/**" = ["S603", "S607"]
"services/execution_engine/**" = ["D101", "D103", "S603", "S607", "S602", "E701", "PLR0912", "B027", "ASYNC221"]
"services/desktop/**" = ["D101", "D103", "S603", "S607", "S112", "S324", "E701"]
"core/contracts/execution_engine.py" = ["D101"]
"surfaces/desktop/**" = ["D101", "D103", "F401"]
"scripts/start.py" = ["S603", "S607", "ASYNC230"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "agents", "supervisor", "orchestrator", "surfaces"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  ".",
]
files = [
  "core",
  "services",
  "agents",
  "supervisor",
  "orchestrator",
  "surfaces/api",
  "surfaces/cli",
]

[[tool.mypy.overrides]]
module = [
  "pywinauto.*",
  "pyautogui.*",
  "win32api",
  "win32con",
  "win32service",
  "win32serviceutil",
  "win32event",
  "win32job",
  "win32security",
  "ntsecuritycon",
  "pythoncom",
  "pywintypes",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "services.runtime_discovery.*",
  "services.brain.*",
  "services.execution_engine.*",
  "services.installer.*",
  "services.desktop.*",
  "services.monitoring.*",
  "services.self_healing.*",
  "services.plugin.*",
  "services.provider_validation.*",
  "services.validator.*",
  "services.doctor.*",
  "services.backup.*",
  "services.cleanup.*",
  "services.uninstall.*",
  "services.reset.*",
  "services.packaging.*",
  "services.certify.*",
  "services.benchmark.*",
  "services.mcp.*",
  "services.dashboard.*",
  "services.organization.*",
  "services.research.*",
  "services.security.*",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "5.1.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
  "-ra",
  "--cov=core",
  "--cov=services",
  "--cov=agents",
  "--cov=supervisor",
  "--cov=orchestrator",
  "--cov-report=term-missing",
  "--cov-report=html:coverage/html",
  "--cov-report=xml:coverage/coverage.xml",
]
markers = [
  "offline: tests that must pass with no network access",
  "windows: tests that only run on Windows",
  "linux: tests that only run on Linux",
  "slow: tests that take more than 1 second",
  "integration: tests that require external services (DB, Qdrant, etc.)",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pytest_asyncio.*",
  "ignore::pytest.PytestUnraisableExceptionWarning",
  "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["core", "services", "agents", "supervisor", "orchestrator", "surfaces"]
branch = true
omit = [
  "*/tests/*",
  "*/__main__.py",
  "surfaces/web/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts", "surfaces/web"]
skips = ["B404", "B603", "B604", "B108", "B701", "B101", "B105", "B110"]
targets = ["core", "services", "agents", "supervisor", "orchestrator", "surfaces"]

[tool.pip-audit]
strict = true
desc = true
require-hashes = false
